# grpc-named-pipe

./: .gitignore  CMakeLists.txt  vcpkg.json
docs/: Development.md
examples/: CMakeLists.txt  greeter_client.cc  greeter_server.cc
include/: NpCommon.hpp  NpDnsResolver.hpp  NpEndpoint.hpp  NpEventEngine.hpp  NpListener.hpp  NpTaskMap.hpp
src/: NpDnsResolver.cpp  NpEndpoint.cpp  NpEventEngine.cpp  NpListener.cpp  NpTaskMap.cpp
tests/: CMakeLists.txt  basic_test.cpp
